* improve match candidate generation.